--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!--  
 	By Darshan Karkar
 	Created using a superheroes JSON feed I made of 20 superheroes. No particular order.
-	Jquery was used.
+	Jquery was used for getting json. 
+	Typeahead.js was used for search autocomplete. Still works without it, but requires exact case match.
 
- ______     __  __     ______   ______     ______     __  __     ______     ______     ______     ______     ______    
-/\  ___\   /\ \/\ \   /\  == \ /\  ___\   /\  == \   /\ \_\ \   /\  ___\   /\  == \   /\  __ \   /\  ___\   /\  ___\   
-\ \___  \  \ \ \_\ \  \ \  _-/ \ \  __\   \ \  __<   \ \  __ \  \ \  __\   \ \  __<   \ \ \/\ \  \ \  __\   \ \___  \  
- \/\_____\  \ \_____\  \ \_\    \ \_____\  \ \_\ \_\  \ \_\ \_\  \ \_____\  \ \_\ \_\  \ \_____\  \ \_____\  \/\_____\ 
-  \/_____/   \/_____/   \/_/     \/_____/   \/_/ /_/   \/_/\/_/   \/_____/   \/_/ /_/   \/_____/   \/_____/   \/_____/ 
+           _____________________________________________ 
+         //:::::::::::::::::::::::::::::::::::::::::::::\\ 
+       //:::_______:::::::::________::::::::::_____:::::::\\ 
+     //:::_/   _-"":::_--"""        """--_::::\_  ):::::::::\\ 
+    //:::/    /:::::_"                    "-_:::\/:::::|^\:::\\ 
+   //:::/   /~::::::I__                      \:::::::::|  \:::\\ 
+   \\:::\   (::::::::::""""---___________     "--------"  /:::// 
+    \\:::\  |::::::::::::::::::::::::::::""""==____      /:::// 
+     \\:::"\/::::::::::::::::::::::::::::::::::::::\   /~:::// 
+       \\:::::::::::::::::::::::::::::::::::::::::::)/~:::// 
+         \\::::\""""""------_____:::::::::::::::::::::::// 
+           \\:::"\               """""-----_____::::::// 
+             \\:::"\    __----__                ):::// 
+               \\:::"\/~::::::::~\_         __/~::// 
+                 \\::::::::::::::::""----"""::::// 
+                   \\:::::::::::::::::::::::::// 
+                     \\:::\^""--._.--""^/:::// 
+                       \\::"\         /"::// 
+                         \\::"\     /"::// 
+                           \\::"\_/"::// 
+                             \\:::::// 
+                               \\_// 
+                                 " 
+//superman logo courtsey of: http://www.chris.com/ascii/index.php?art=comics/superman
+
                                                                                                                        
 -->
 <!doctype html>
@@ -19,7 +40,7 @@
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<h1 class="main"><a href="http://www.dkarkar.me/superheroes/test.html">Superheroes</a></h1>
+	<h1 class="main"><a href="http://www.dkarkar.me/superheroes">Superheroes</a></h1>
 	<h4>By Darshan Karkar</h4>
 	<div class="container">
 		<div class="left">
@@ -43,7 +64,7 @@
 							<option value="first_appearance">First Appearance</option>
 							<option value="characters">Characters</option>
 						</select>
-						<input type="search" name="search" id="search">
+						<input type="text" name="search" id="search">
 						<input type="submit" value="Search" id="submit">
 					</form>
 				</div>
@@ -55,6 +76,7 @@
 		</div>
 	</div>
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+	<script src="js/typeahead.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
