--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 	</div>
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	<script src="js/typeahead.min.js"></script>
+	<script src="js/typeahead.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
