Search All completed
No autocomplete, but search all is finished.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				<div class="hero" id="form">
 					<form id="form" name="form">
 						<select id="attr">
+							<option value="all">All</option>
 							<option value="superhero">Superhero</option>
 							<option value="publisher">Publisher</option>
 							<option value="alter_ego">Alter Ego</option>
@@ -71,8 +72,10 @@
 			</ul>	
 		</div>
 		<div class="right">
-			<span class="dc">D</span><br>
-			<span class="dc">C</span><br>
+			<div class="dc">
+				<span class="dc">D</span><br>
+				<span class="dc">C</span><br>
+			</div>
 		</div>
 	</div>
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
